--- a/MagisterHuiswerk Extension/Resources/manifest.json
+++ b/MagisterHuiswerk Extension/Resources/manifest.json
@@ -20,7 +20,7 @@
 
     "content_scripts": [{
         "js": [ "content.js" ],
-        "matches": [ "*://niftarlake.magister.net/magister/#/agenda/afspraak/nieuw/*", "*wittopkoning.nl/" ]
+        "matches": [ "*://niftarlake.magister.net/magister/#/agenda/afspraak/nieuw/*", "*wittopkoning.nl/", "*://localhost:*/*" ]
     }],
 
     "browser_action": {
