--- a/MagisterHuiswerk Extension/Resources/manifest.json
+++ b/MagisterHuiswerk Extension/Resources/manifest.json
@@ -19,8 +19,8 @@
     },
 
     "content_scripts": [{
-        "js": [ "content.js" ],
-        "matches": [ "*://niftarlake.magister.net/magister/#/agenda/afspraak/nieuw/*", "https://wittopkoning.nl*", "*://localhost:*/*" ]
+        "js": [ "content.js", "script.js" ],
+        "matches": [ "https://niftarlake.magister.net/magister/#/agenda/afspraak/nieuw/*", "https://wittopkoning.nl*", "*://localhost:*/*" ]
     }],
 
     "browser_action": {
@@ -33,5 +33,5 @@
         }
     },
 
-    "permissions": [ ]
+    "permissions": [ "https://niftarlake.magister.net/*" ]
 }
